# inference-onnx-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  install.sh  wav2vec-onnx-inference.py
.github/workflows/: build-macos.yml
asr/: Cargo.toml
asr/src/: main.rs
koko/src/: main.rs
kokoros/: Cargo.toml
kokoros-openai/src/: lib.rs
kokoros/src/onn/: ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs
kokoros/src/utils/: mod.rs
scripts/: openai_tts_client.py  preprocess_audio.py
