[package]
name = "asr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asr"
path = "src/main.rs"

[dependencies]
# ONNX Runtime for inference
ort = { version = "2.0.0-rc.11", default-features = true }
ndarray = "0.16.1"

# Audio processing
hound = "3.5.1"
libsoxr = "0.2"  # SoX Resampler - same as librosa soxr_hq

# JSON/Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Downloads
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
futures-util = "0.3"

# HTTP Server for OpenAI API
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
